# vital-ai-windesheim-groep-4

./: .devcontainer.json  .gitignore  README.md  SofaCalculator.py  flake.nix  main.py  nohup.out  predictions.csv  pyproject.toml  requirements.txt  skills-lock.json
Docker/: Dockerfile
Notebooks/: noah.ipynb
data/: main.py  validation_labels.csv  validation_predictions.csv
persoonlijke_notebooks/: ernesto.py
persoonlijke_notebooks/__marimo__/session/: ernesto.py.json
persoonlijke_notebooks/noah/: all_result.csv  all_result_13-05-2026  all_result_13-05-2026.csv  get_best_utility_score.py  noah.py  optimalisation.py  predictions.csv  temp_pred.csv  temp_true.csv  testset (with label).csv
persoonlijke_notebooks/noah/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
persoonlijke_notebooks/noah/catboost_info/learn/: events.out.tfevents
persoonlijke_notebooks/noah/catboost_info/test/: events.out.tfevents
persoonlijke_notebooks/noah/optuna_storage/: results.csv  results_1.csv  sepsis_optuna.db
persoonlijke_notebooks/noah/optuna_storage/saved_models/: all_lgbm.pkl  all_lgbm_13-05-2026.pkl  all_xgb_13-05-2026.pkl  base_catboost_10-05-2026.pkl  (+6 more)
scripts/: cuda-doctor.sh  start-marimo-cuda.sh
src/helpers/: __init__.py  notebook_helpers.py
src/scepsis_prediction/: SofaCalculator.py  __init__.py  evaluation.py  feature_engineering.py  sofa_calculator.py
src/scepsis_prediction.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
temp/: neural.py  winkel_verkoopdata.csv
temp/__marimo__/session/: neural.py.json
(+5 files in other folders)
